REWIND-158: fixed default memory limitation on group_service
