# Backend/api-gateway-service/docs/swagger.yaml
@@ -937,6 +937,10 @@ paths:
           description: Not Found - Group or User not found
           schema:
             $ref: '#/definitions/responses.ErrorResponse'
+        "413":
+          description: Payload Too Large - Image file size exceeds the limit".
+          schema:
+            $ref: '#/definitions/responses.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -1320,6 +1324,10 @@ paths:
             $ref: '#/definitions/responses.ErrorResponse'
         "404":
           description: Not Found - Group or User not found
+          schema:
+            $ref: '#/definitions/responses.ErrorResponse'
+        "413":
+          description: Payload Too Large - Image file size exceeds the limit".
           schema:
             $ref: '#/definitions/responses.ErrorResponse'
         "500":
@@ -1992,6 +2000,10 @@ paths:
             $ref: '#/definitions/responses.ErrorResponse'
         "404":
           description: Not Found - User not found".
+          schema:
+            $ref: '#/definitions/responses.ErrorResponse'
+        "413":
+          description: Payload Too Large - Image file size exceeds the limit".
           schema:
             $ref: '#/definitions/responses.ErrorResponse'
         "500":
