# Backend/api-gateway-service/internal/app/handlers/group.go
@@ -143,6 +143,7 @@ func (h *GroupHandler) GetGroup(w http.ResponseWriter, r *http.Request) {
 // @Failure 401 {object} responses.ErrorResponse "Unauthorized - User not authenticated"
 // @Failure 403 {object} responses.ErrorResponse "Forbidden - User is not an administrator of the group"
 // @Failure 404 {object} responses.ErrorResponse "Not Found - Group or User not found"
+// @Failure 413 {object} responses.ErrorResponse "Payload Too Large - Image file size exceeds the limit".
 // @Failure 500 {object} responses.ErrorResponse "Internal Server Error"
 // @Failure 503 {object} responses.ErrorResponse "Service Unavailable"
 // @Failure 504 {object} responses.ErrorResponse "Deadline Exceeded - response timed out".
